# dojo_14-04-10

./: README.md
fonctionnel/haskell/: Gemfile  Guardfile  README.md  thermometre.cabal
fonctionnel/haskell/src/: Thermometre.hs
fonctionnel/haskell/test/: ThermometreSpec.hs
slides/: index.html
