name:             Thermometre
version:          0.1.0.0
synopsis:            synopsis
-- description:         
license:             PublicDomain
license-file:        LICENSE
author:              Black
-- maintainer:          
-- copyright:           
-- category:            
build-type:       Simple
cabal-version:    >= 1.8

library
  hs-source-dirs:
      src
  exposed-modules:
      Thermometre
  build-depends:
      base    == 4.*
    , lens    >= 4.1

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base    == 4.*
    , Thermometre
    , hspec   >= 1.3
